refactor: rewrite SnifferAggregator to use DiscoveredNode and NodesSniffer